<resources>
    <string name="app_name">MyProject</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="track_android">Track: Android</string>
    <string name="email_tunmisesuliat_gmail_com">Email: tunmisesuliat@gmail.com</string>
    <string name="phone_2348135997541">Phone: 2348135997541</string>
    <string name="slack_username_tunmisesuliat">Slack Username: @Tunmisesuliat</string>
    <string name="country_nigeria">Country: Nigeria</string>
    <string name="name_resource">Oyekola Suliat</string>
    <string name="todo">TODO</string>
</resources>
